--- a/index.html
+++ b/index.html
@@ -8,28 +8,35 @@
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  
+  <div class="card">
+    <div class="background">
+      <img src="/images/bg-pattern-card.svg" alt="Background">
+    </div>
+    <div class="user-info">
+      <h2 class="userName">Victor Crest <span class=userAge>26</span></h1>
+      <p class="userLocation">London</p>
+    </div>
+    <div class="info info1">
+      <h2 class="stats">80K</h2>
+      <p class="statsOf">Followers</p></div>
+    <div class="info info2">
+      <h2 class="stats">803K</h2>
+      <p class="statsOf">Likes</p></div>
+    <div class="info info3">
+      <h2 class="stats">1.4K</h2>
+      <p class="statsOf">Photos</p></div>
+    
+  </div>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Charlie025x">Charlie Alonso</a>.
   </div>
 </body>
 </html>
