fixed card's images and desktopView styles

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 <body>
   
   <div class="card">
-    <div class="background">
-      <img src="/images/bg-pattern-card.svg" alt="Background">
-    </div>
     <div class="user-info">
+      <img class="profilePic" src="images/image-victor.jpg" alt="profile picture">
       <h2 class="userName">Victor Crest <span class=userAge>26</span></h1>
       <p class="userLocation">London</p>
     </div>
